--- a/main.html
+++ b/main.html
@@ -8,7 +8,52 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- add table here -->
+    <table id="d">
+		<thead id="a">
+			<tr>
+				<th>NAME</th>
+				<th>KILLS</th>
+				<th>SAVED</th>
+				<th>DEATHS</th>
+				<th>REVIVES</th>
+				<th>WIN</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr class="b">
+				<td>Hackerman</td>
+				<td>10</td>
+				<td>0</td>
+				<td>1</td>
+				<td>0</td>
+				<td>0</td>
+			</tr>
+			<tr class="c">
+				<td>Hackerman</td>
+				<td>10</td>
+				<td>0</td>
+				<td>1</td>
+				<td>0</td>
+				<td>0</td>
+			</tr>
+			<tr class="b">
+				<td>Hackerman</td>
+				<td>10</td>
+				<td>0</td>
+				<td>1</td>
+				<td>0</td>
+				<td>0</td>
+			</tr>
+			<tr class="c">
+				<td>Hackerman</td>
+				<td>10</td>
+				<td>0</td>
+				<td>1</td>
+				<td>0</td>
+				<td>0</td>
+			</tr>
+		</tbody>
+	</table>
 
         
 </body>
